--- a/clases.html
+++ b/clases.html
@@ -43,6 +43,56 @@
           <li><a href="clases_archivos/Programa_MatematicaIV_2018.pdf">Programa
               de Matemática IV</a></li>
           <li><a href="clases_archivos/Algebra_Teoria1.pdf">Álgebra Teoría I</a></li>
+          <li><a href="clases_archivos/Algebra_Teoria2.pdf"><span style="color: #18bc9c;">Álgebra
+                Teoría II</span></a></li>
+          <ul>
+            <li><span style=" color: #18bc9c;">Enlaces de videos<br>
+              </span></li>
+            <ul>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=IrggOvOSZr4">Transformaciones
+                    de vectores</a></p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=8CX-Q0gtSp8">Margot
+                    Gerritsen (motivación)</a></p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=clhpHYJywMc">Motivación
+                    algebra lineal (aplicación en google)</a></p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=P2LTAUO1TdA">Cambio
+                    de base</a></p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=kYB8IZa5AuE">Rotaciones
+                    (animación)</a></p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://es.khanacademy.org/math/linear-algebra/matrix-transformations/lin-trans-examples/v/linear-transformation-examples-rotations-in-r2">Clase
+                    de la Academia Khan </a>1</p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://es.khanacademy.org/math/linear-algebra/matrix-transformations/modal/v/expressing-a-projection-on-to-a-line-as-a-matrix-vector-prod%20">Clases
+                    de la Academia Khan</a> 2</p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=ggWYkes-n6E">Clase
+                    de G. Strang de los 4 subespacios fundamentales (MIT)</a></p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=LyGKycYT2v0">Video
+                    sobre proyección</a></p>
+              </li>
+              <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=BaM7OCEm3G0%20">Producto
+                    vectorial y transformaciones lineales</a></p>
+              </li>
+            </ul>
+          </ul>
+        </ul>
+        <ul>
         </ul>
         <a href="https://sites.google.com/view/moccai">
           <p><br>
