--- a/clases.html
+++ b/clases.html
@@ -92,6 +92,11 @@
             </ul>
             <li><a href="clases_archivos/eigshow.m"><span style="color: #18bc9c;">script
                   eigshow.m</span></a></li>
+          </ul>
+          <li><span style=" color: #18bc9c;"><a href="clases_archivos/Algebra_Teoria3.pdf">Álgebra
+                Teoría III</a><br>
+            </span></li>
+          <ul>
             <ul>
             </ul>
           </ul>
