--- a/practicas.html
+++ b/practicas.html
@@ -45,8 +45,8 @@
         <ul>
           <li><a href="practicas_archivos/MateIV_2018_Actividad1.pdf">Trabajo
               Práctico 1&nbsp;</a></li>
-          <li><a href="file:///home/user/matematica4fcai.github.io/practicas_archivos/MateIV_2018_Actividad2.pdf"><span
-                style="color: #18bc9c;">Trabajo Práctico 2</span></a></li>
+          <li><a href="practicas_archivos/MateIV_2018_Actividad2.pdf"><span style="color: #18bc9c;">Trabajo
+                Práctico 2</span></a></li>
         </ul>
         <a href="https://sites.google.com/view/moccai">
           <p><br>
