--- a/2018_ciclo/about.html
+++ b/2018_ciclo/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Matemática - 2019</title>
+    <title>Matemática IV - 2018</title>
     <meta name="description" content="Matemática IV para Ingeniería Mecánica">
     <link rel="stylesheet" href="index_archivos/main.css">
     <link rel="canonical" href="https://introoctave.github.io/">
@@ -13,19 +13,18 @@
   </head>
   <body>
     <header id="header" class="navbar navbar-default navbar-fixed-top">
-      <div class="container"> <a href="index.html" class="navbar-brand">Matemática IV - 2019</a>
+      <div class="container"> <a href="index.html" class="navbar-brand">Matemática IV - 2018</a>
         <div class="navbar-header"> <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main"> <span class="icon-bar"></span>
             <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
         </div>
         <div class="collapse navbar-collapse" id="navbar-main">
           <ul class="nav navbar-nav">
-            <li><a href="clases.html">Clases</a></li>
-            <li><a href="practicas.html">Prácticas</a></li>
-            <li><a href="biblio.html">Biblio</a></li>
+            <li><a href="clases.html">Clases 2018</a></li>
+            <li><a href="practicas.html">Prácticas 2018</a></li>
+			<li><a href="biblio.html">Biblio 2018</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">Sobre la Asignatura</a></li>
-            <li><a href="2018_ciclo/index.html">Ciclo 2018</a></li>
+            <li><a href="../index.html">Matemática IV</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse --> </div>
@@ -38,15 +37,22 @@
      margin-bottom: 2cm;
   }
 </style> <p class="bottom-three"> </p>
-    <!-- <div class="site-banner"> -->
-    <!--     <img src="/images/banner.jpg"></img> -->
-    <!-- </div> -->
     <div class="site-content container">
       <div class="col-md-9">
-        <h1 id="introducción-a-octave">Bibliografía</h1>
+        <h2 id="carreras">Carreras:</h2>
         <ul>
-          <li><a href="http://www-math.mit.edu/%7Egs/"><span style="color: #18bc9c;">Videos</span></a></li>
+          <li>Ingeniería Mecánica,</li>
         </ul>
+        <h2 id="programa"><a href="clases_archivos/Programa_MatematicaIV_2018.pdf">Programa</a></h2>
+        <h2 id="objetivos">Objetivos</h2>
+        <ol>
+          <li>Formación teórica en transformaciones lineales.</li>
+          <li>Formación teórica en temas de variable compleja, integración en el
+            plano complejo.</li>
+          <li>Ecuaciones diferenciales ordinarias, ecuaciones diferenciales en
+            derivadas paraciales, funciones especiales.</li>
+          <li>Conocimientos básicos en ecuaciones derivadas parciales.</li>
+        </ol>
         <a href="https://sites.google.com/view/moccai">
           <p><br>
           </p>
@@ -56,4 +62,4 @@
       </div>
     </div>
   </body>
- </html>
+</html>
