--- a/clases.html
+++ b/clases.html
@@ -40,8 +40,7 @@
       <div class="col-md-9">
         <h1 id="introducción-a-octave">Clases</h1>
         <ul>
-          <li><a href="clases_archivos/Programa_MatematicaIV_2019.pdf">Programa
-              de Matemática IV</a></li>
+          <li><a href="clases_archivos/Programa_MatematicaIV_2019.pdf">Programa de Matemática IV</a></li>
           <li><a href="clases_archivos/Algebra_Teoria1_2019.pdf">Álgebra Teoría I</a></li>
           <li><a href="clases_archivos/Algebra_Teoria2.pdf"><span style="color: #18bc9c;">Álgebra
                 Teoría II</span></a></li>
