--- a/index.html
+++ b/index.html
@@ -60,16 +60,15 @@
         <ul>
         </ul>
         <ul>
-          <li>Fecha de inicio: lunes 30/08/2018.</li>
-          <li>Fecha de finalización: 02/09/2018.</li>
+          <li>Fecha de inicio: lunes 50/08/2019.</li>
+          <li>Fecha de finalización: 09/11/2019.</li>
           <li>Duración: 120 hs.</li>
-          <li>Lunes, teoría y práctica de 18:00hs a 21:00hs.</li>
-          <li>Miércoles, teoría y práctica de 9:30hs a 13:00hs.</li>
-          <li>Jueves, práctica de 15:30 a 17:30.</li>
-          <li>Primera evaluación Parcial: Jueves 6 de setiembre.</li>
-          <li>Segunda evaluación Parcial: Jueves 11 de octubre.</li>
-          <li>Tercera evaluación Parcial (Trabajo integrador): jueves 1 de
-            noviembre.</li>
+          <li>Lunes, teoría y práctica de 09:00hs a 12:00hs.</li>
+          <li>Miércoles, teoría y práctica de 9:00hs a 12:00hs.</li>
+          <li>Viernes, práctica de 18:30 a 21:00.</li>
+          <li>Primera evaluación Parcial: Jueves 16 de setiembre.</li>
+          <li>Segunda evaluación Parcial: Jueves 28 de octubre.</li>
+          
         </ul>
         <ul>
         </ul>
