--- a/clases.html
+++ b/clases.html
@@ -42,12 +42,15 @@
         <ul>
           <li><a href="clases_archivos/Programa_MatematicaIV_2019.pdf">Programa de Matemática IV</a></li>
           <li><a href="clases_archivos/Algebra_Teoria1_2019.pdf">Álgebra Teoría I</a></li>
+<!--
           <li><a href="clases_archivos/Algebra_Teoria2.pdf"><span style="color: #18bc9c;">Álgebra
                 Teoría II</span></a></li>
           <ul>
+-->
             <li><span style=" color: #18bc9c;">Enlaces de videos<br>
               </span></li>
             <ul>
+<!--		    
               <li>
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=IrggOvOSZr4">Transformaciones
                     de vectores</a></p>
@@ -76,10 +79,13 @@
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://es.khanacademy.org/math/linear-algebra/matrix-transformations/modal/v/expressing-a-projection-on-to-a-line-as-a-matrix-vector-prod%20">Clases
                     de la Academia Khan</a> 2</p>
               </li>
+-->
+
               <li>
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=ggWYkes-n6E">Clase
                     de G. Strang de los 4 subespacios fundamentales (MIT)</a></p>
               </li>
+<!--
               <li>
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=LyGKycYT2v0">Video
                     sobre proyección</a></p>
@@ -88,10 +94,14 @@
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=BaM7OCEm3G0%20">Producto
                     vectorial y transformaciones lineales</a></p>
               </li>
+-->
             </ul>
+<!--
             <li><a href="clases_archivos/eigshow.m"><span style="color: #18bc9c;">script
                   eigshow.m</span></a></li>
+-->
           </ul>
+<!--
           <li><span style=" color: #18bc9c;"><a href="clases_archivos/Algebra_Teoria3.pdf">Álgebra
                 Teoría III</a></span></li>
           <li><span style="  color: #18bc9c;"><a href="clases_archivos/Variable%20Compleja_Teor%C3%ADa1.pdf">Variable
@@ -119,21 +129,15 @@
           <li><span style="    color: #18bc9c;"><a href="clases_archivos/Variable%20Compleja_Teor%C3%ADa2.pdf">Variabl
                 compleja Teoría II</a><br>
             </span></li>
-          <ul>
-            <ul>
-            </ul>
-          </ul>
-          <ul>
-            <ul>
-            </ul>
-          </ul>
         </ul>
         <ul>
         </ul>
         <a href="https://sites.google.com/view/moccai">
           <p><br>
           </p>
-        </a> </div>
+        </a>
+-->
+	</div>
       <div id="site-side-bar" class="col-md-3">
         <div id="navigation"> </div>
       </div>
