--- a/clases.html
+++ b/clases.html
@@ -83,7 +83,7 @@
 
               <li>
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=ggWYkes-n6E">Clase
-                    de G. Strang de los 4 subespacios fundamentales (MIT)</a></p>
+                    de G. Strang de los 4 subespacios fundamentales (MIT)</a> (Obligatorio ver antes del 12 de Agosto 2019)</p>
               </li>
 <!--
               <li>
