--- a/clases.html
+++ b/clases.html
@@ -44,6 +44,8 @@
           <li><a href="clases_archivos/Algebra_Teoria1_2019_bis.pdf">Álgebra Teoría I</a></li>
           <li><a href="clases_archivos/Algebra_Teoria2_2019.pdf"><span style="color: #18bc9c;">Álgebra
                 Teoría II</span></a></li>
+	  <li><a href="clases_archivos/Algebra_Teoria3_2019bis.pdf"><span style="color: #18bc9c;">Álgebra
+                Teoría III</span></a></li>
           <ul>
 -->
             <li><span style=" color: #18bc9c;">Enlaces de videos<br>
