--- a/clases.html
+++ b/clases.html
@@ -68,6 +68,10 @@
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=P2LTAUO1TdA">Cambio
                     de base</a></p>
               </li>
+	      <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=P2LTAUO1TdA&list=PL0-GT3co4r2y2YErbmuJw2L5tW4Ew2O5B&index=14&t=0s">Cambio de bases | La esencia del álgebra lineal </a></p>
+              </li>
+		    
               <li>
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=kYB8IZa5AuE">Rotaciones
                     (animación)</a></p>
