--- a/clases.html
+++ b/clases.html
@@ -90,21 +90,23 @@
                     de G. Strang de los 4 subespacios fundamentales (MIT)</a> (Obligatorio ver antes del 12 de Agosto de 2019)</p>
               </li>
               <li>
-                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=LyGKycYT2v0">Video
-                    sobre proyección</a></p>
-              </li>
-              <li>
                 <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=BaM7OCEm3G0%20">Producto
                     vectorial y transformaciones lineales</a></p>
               </li>
             </ul>
-            <li><a href="clases_archivos/eigshow.m"><span style="color: #18bc9c;">script
+           
+
+          <li><a href="clases_archivos/Algebra_Teoria4_2019bis.pdf"><span style="color: #18bc9c;">Álgebra
+                Teoría IV</span></a></li>
+           <li><a href="clases_archivos/eigshow.m"><span style="color: #18bc9c;">script
                   eigshow.m</span></a></li>
-          </ul>
-<!--
-          <li><span style=" color: #18bc9c;"><a href="clases_archivos/Algebra_Teoria3.pdf">Álgebra
-                Teoría III</a></span></li>
-          <li><span style="  color: #18bc9c;"><a href="clases_archivos/Variable%20Compleja_Teor%C3%ADa1.pdf">Variable
+            <li>
+                <p style="margin-bottom: 0.28cm; line-height: 108%"><a href="https://www.youtube.com/watch?v=LyGKycYT2v0">Video
+                    sobre proyección</a></p>
+              </li>
+           </ul>
+   --!
+	 <li><span style="  color: #18bc9c;"><a href="clases_archivos/Variable%20Compleja_Teor%C3%ADa1.pdf">Variable
                 Compleja Teoría I</a></span></li>
           <ul>
             <li><span style="   color: #18bc9c;">Apuntes en pdf<br>
