--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           <li>Fecha de inicio: lunes 50/08/2019.</li>
           <li>Fecha de finalización: 09/11/2019.</li>
           <li>Duración: 120 hs.</li>
-          <li>Lunes, teoría y práctica de 09:00hs a 12:00hs.</li>
+          <li>Lunes, teoría de 10:00hs a 13:00hs.</li>
+	  <li>Lunes, práctica de 18:30hs a 21:00hs.</li>
           <li>Miércoles, teoría y práctica de 9:00hs a 12:00hs.</li>
-          <li>Viernes, práctica de 18:30 a 21:00.</li>
           <li>Primera evaluación Parcial: Jueves 16 de setiembre.</li>
           <li>Segunda evaluación Parcial: Jueves 28 de octubre.</li>
           
