--- a/practicas.html
+++ b/practicas.html
@@ -51,8 +51,10 @@
 <!--
           <li><span style=" color: #18bc9c;"><a href="practicas_archivos/MateIV_2019_Actividad3.pdf">Trabajo
                 Práctico 3</a></span>: Aplicaciones de Algebra Lineal</li>
-          <li><span style="  color: #18bc9c;"><a href="practicas_archivos/MateIV_2019_Actividad4.pdf">Trabajo
-                Práctico 4</a></span>: Números Complejos y Variable Compleja</li>
+-->
+          <li><span style="  color: #18bc9c;"><a href="practicas_archivos/MateIV_2019_Actividad4_corregido.pdf">Trabajo
+                Práctico 4</a></span>: Variable Compleja y Funciones </li>
+<!--
           <li><span style="  color: #18bc9c;"><a href="practicas_archivos/MateIV_2019_Actividad5.pdf">Trabajo
                 Práctico 5</a></span>: Teoremas de Variable Compleja</li>
 			<li><span style="  color: #18bc9c;"><a href="practicas_archivos/MateIV_2019_Actividad6.pdf">Trabajo
