--- a/clases.html
+++ b/clases.html
@@ -48,6 +48,8 @@
                 Teoría III</span></a></li>
 	  <li><a href="clases_archivos/Algebra_Teoria4_2019.pdf"><span style="color: #18bc9c;">Álgebra
                 Teoría IV</span></a></li>
+	  <li><span style="  color: #18bc9c;"><a href="clases_archivos/Var_Compleja_Teoría1_2019.pdf">Variable
+                Compleja Teoría I</a></span></li>
           <ul>
 -->
             <li><span style=" color: #18bc9c;">Enlaces de videos<br>
@@ -108,9 +110,7 @@
            
            </ul>
   <!--
-	 <li><span style="  color: #18bc9c;"><a href="clases_archivos/Variable%20Compleja_Teor%C3%ADa1.pdf">Variable
-                Compleja Teoría I</a></span></li>
-          <ul>
+	           <ul>
             <li><span style="   color: #18bc9c;">Apuntes en pdf<br>
               </span></li>
             <ul>
