--- a/clases.html
+++ b/clases.html
@@ -52,7 +52,7 @@
                 Compleja Teoría I</a></span></li>
           <ul>
 -->
-            <li><span style=" color: #18bc9c;">Enlaces de videos, Bloque 1: Álgebra Lineal<br>
+            <li><span>Enlaces de videos, Bloque 1: Álgebra Lineal<br>
               </span></li>
             <ul>
 		    
@@ -103,7 +103,7 @@
               </li>
             </ul>
            
-            <li><span style=" color: #18bc9c;">Enlaces de videos, Bloque 2: Variable Compleja<br>
+            <li><span>Enlaces de videos, Bloque 2: Variable Compleja<br>
               </span></li>
           <ul>
 	      <li>
