--- a/clases.html
+++ b/clases.html
@@ -50,6 +50,8 @@
                 Teoría IV</span></a></li>
 	  <li><span style="  color: #18bc9c;"><a href="clases_archivos/Var_Compleja_Teoría1_2019.pdf">Variable
                 Compleja Teoría I</a></span></li>
+          <li><span style="  color: #18bc9c;"><a href="clases_archivos/Var_Compleja_Teoría2_oct8_2019.pdf">Variable
+                Compleja Teoría II</a></span></li>
           <ul>
 -->
             <li><span>Enlaces de videos, Bloque 1: Álgebra Lineal<br>
