--- a/clases.html
+++ b/clases.html
@@ -52,6 +52,8 @@
                 Compleja Teoría I</a></span></li>
           <li><span style="  color: #18bc9c;"><a href="clases_archivos/Variable_Compleja_Teoría2_oct8_2019.pdf">Variable
                 Compleja Teoría II</a></span></li>
+	  <li><span style="  color: #18bc9c;"><a href="clases_archivos/Variable Compleja_Teoria3_2019_oct25.pdf">Variable
+                Compleja Teoría III</a></span></li>
           <ul>
 -->
             <li><span>Enlaces de videos, Bloque 1: Álgebra Lineal<br>
